--- a/project1a.html
+++ b/project1a.html
@@ -66,7 +66,8 @@
 
         <br>
 
-        <div class="articles" >
+        <div class="articles">
+        
 
             <button class="techbutton">TECHNOLOGY</button>
             <h1 id="subjectheading">10 Must-Read Tech Sites to Stay Updated</h1>
@@ -76,15 +77,16 @@
                 <div class="signature">
                     <a id="laProfile" href="https://www.lifehack.org/author/larry-alton">Larry Alton</a>
 
-                    <span id="jobtitle">Business Consultant <button id="readprofile">Read full profile</button></span>
+                    <span id="jobtitle">Business Consultant <button id="readprofile"><a href="https://www.lifehack.org/author/larry-alton">Read full profile</a></button></span>
                 </div>
             </div>
             <div class="socialmedia">
-                <button <i class="fab fa-facebook-square"></i>Share</button>
-                <button <i class="fab fa-pinterest"></i>PinIt</button>
-                <button <i class="fab fa-twitter"></i>Tweet</button>
-                <button <i class="fab fa-linkedin"></i>Share</button>
-                <button <i class="far fa-envelope"></i>Email</button>
+                
+                <button <i class="fab fa-facebook-square"></i><a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.lifehack.org%2Farticles%2Ftechnology%2F10-must-read-tech-sites-stay-updated.html">Share</a></button>
+                <button <i class="fab fa-pinterest"></i><a href="https://www.pinterest.ca/pin-builder/?description=Are%20you%20looking%20for%20the%20most%20credible%20voices%20in%20technology%20news%253F&media=https%253A%252F%252Fmedia.lifehack.org%252Fwp-content%252Ffiles%252F2015%252F01%252Fworkstation-405768_1280.jpg&url=https%253A%252F%252Fwww.lifehack.org%252Farticles%252Ftechnology%252F10-must-read-tech-sites-stay-updated.html&autologin=true&method=button">PinIt</a></button>
+                <button <i class="fab fa-twitter"></i><a href="https://twitter.com/intent/tweet?text=Are+you+looking+for+the+most+credible+voices+in+technology+news%3F&url=https%3A%2F%2Fwww.lifehack.org%2Farticles%2Ftechnology%2F10-must-read-tech-sites-stay-updated.html">Tweet</a></button>
+                <button <i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fwww.lifehack.org%2Farticles%2Ftechnology%2F10-must-read-tech-sites-stay-updated.html">Share</a></button>
+                <button <i class="far fa-envelope"></i><a href="https://www.gmail.com">Email</a></button>
             </div>
 
             <p id="leadIn">Are you looking for the most credible voices in technology news? The rise of online
